<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- *** GENERAL *** -->
    <string name="app_name">Wake Up Call</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_delete">Do you really want to delete that?</string>
    
    <!-- HOME -->
    <string name="homeAlarmsButtonText">Alarms</string>
    <string name="homePlaylistsButtonText">Playlists</string>
    
    
    <!-- *** ALARM *** -->
    
    <!-- LIST ALARMS -->
    <string name="listAlarmsNewAlarmButtonText">New alarm</string>
    <string name="next">Next</string>
    <string name="notActivated">(not activated)</string>
    <string name="activationNotAllowed">You can\'t activate this alarm because it has a date in the past</string>
    <string name="nextAlarm">Next alarm:</string>
    
    <!-- EDIT ALARM -->
    <string name="alarm">Alarm</string>
    <string name="nameOfTheAlarm">Name of the alarm</string>
    <string name="choose">Choose</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="vibrate">Vibrate</string>
    <string name="after">After</string>
    <string name="alarmNameEmpty">You can\'t save an alarm with no name</string>
    <string name="noPlaylistChosen">You can\'t save an alarm with no playlist</string>
    <string name="noDateChosen">You can\'t save an alarm with no date</string>
    <string name="alarmIn">Alarm in</string>
    <string name="years">years</string>
    <string name="year">year</string>
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="seconds">seconds</string>
    <string name="second">second</string>
    
    <!-- CHOOSE PLAYLIST -->
    <string name="playlists">Playlists</string>
    
    <!-- CHOOSE DATE -->
    <string name="uniqueDate">Unique</string>
    <string name="repeatDate">Repeat</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="pastDate">You can\'t use a past date</string>
    
    <!-- ACTIVE ALARM -->
    <string name="dismiss">Dismiss</string>
            
    
    
    <!-- *** PLAYLIST *** -->
    
    <!-- LIST PLAYLISTS -->
    <string name="listPlaylistsNewPlaylistButtonText">New playlist</string>
    <string name="song">Song</string>
    <string name="songs">Songs</string>
    <string name="playlistUsedIn">This playlist is used in</string>
    <string name="alarmsSingular">alarm</string>
    <string name="alarmsPlural">alarms</string>
    <string name="deleteAlarmSingular">Do you want to delete this alarm?</string>
    <string name="deleteAlarmsPlural">Do you want to delete these alarms?</string>
    
    <!-- EDIT PLAYLIST -->
    <string name="playlist">Playlist</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="nameOfThePlaylist">Name of the playlist</string>
    <string name="add">Add</string>
    <string name="removeAll">Remove all</string>
    <string name="playlistNameEmpty">You can\'t save a playlist with no name</string>
    <string name="playlistNoSongs">You can\'t save a playlist with no songs</string>
    <string name="playlistSaved">The playlist has been saved</string>
    <string name="unknownArtist">Unknown artist</string>
    
    <!-- SONGS SELECTOR -->
    <string name="songsSelectorInstruction">Click on a music file to add it</string>
    <string name="songsSelectorAddAllFilesFromDirectory">Add all the music files from the current directory</string>
    <string name="done">Done</string>
    <string name="noFilesFound">No supported music files were found in this directory</string>
    <string name="oneFileAdded">1 file added to playlist</string>
    <string name="manyFilesAdded">files added to playlist</string>
    <string name="thisFileAdded">File added</string>

</resources>
