<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:padding="20dp">

		<TextView
			android:id="@+id/editAlarmTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:text="@string/alarm"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="30sp" />

		<Button
			android:id="@+id/editAlarmSaveButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentTop="true"
			android:background="@drawable/button2shape"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:text="@string/save"
			android:textColor="#FFFFFF" />

		<TextView
			android:id="@+id/editAlarmNameLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/editAlarmTitle"
			android:layout_marginTop="40dp"
			android:gravity="center_vertical"
			android:text="@string/name"
			android:textSize="20sp" />

		<EditText
			android:id="@+id/editAlarmNameEditText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/editAlarmNameLabel"
			android:layout_marginLeft="30dp"
			android:layout_toRightOf="@+id/editAlarmNameLabel"
			android:ems="10"
			android:hint="@string/nameOfTheAlarm"
			android:inputType="textCapSentences" />

		<TextView
			android:id="@+id/editAlarmPlaylistsLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/editAlarmNameLabel"
			android:layout_marginTop="40dp"
			android:gravity="center_vertical"
			android:text="@string/playlist"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/editAlarmChosenPlaylist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editAlarmNameLabel"
			android:layout_marginTop="42dp"
			android:layout_toLeftOf="@+id/editAlarmChoosePlaylistButton"
			android:layout_toRightOf="@+id/editAlarmPlaylistsLabel"
			android:text=""
			android:textSize="18sp" />

		<Button
			android:id="@+id/editAlarmChoosePlaylistButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/editAlarmPlaylistsLabel"
			android:layout_alignParentRight="true"
			android:background="@drawable/button1shape"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:text="@string/choose"
			android:textColor="#FFFFFF" />

		<CheckBox
			android:id="@+id/repeatCheckbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/editAlarmChosenPlaylist"
			android:layout_marginTop="40dp"
			android:text="@string/repeat"
			android:textSize="20sp" />

		<CheckBox
			android:id="@+id/vibrateCheckbox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/repeatCheckbox"
			android:layout_marginTop="20dp"
			android:text="@string/vibrate"
			android:textSize="20sp" />

		<ImageView
			android:id="@+id/volumeImageview"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/vibrateCheckbox"
			android:layout_marginTop="15dp"
			android:contentDescription="@string/app_name"
			android:src="@drawable/volume_ico" />

		<SeekBar
			android:id="@+id/volumeSeekbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/vibrateCheckbox"
			android:layout_marginTop="20dp"
			android:layout_toRightOf="@+id/volumeImageview" />

		<TextView
			android:id="@+id/editAlarmDateLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/volumeSeekbar"
			android:layout_marginTop="40dp"
			android:text="@string/date"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/editAlarmChosenDate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/volumeSeekbar"
			android:layout_marginTop="42dp"
			android:layout_toLeftOf="@+id/editAlarmChooseDateButton"
			android:layout_toRightOf="@+id/editAlarmDateLabel"
			android:text=""
			android:textSize="18sp" />

		<Button
			android:id="@+id/editAlarmChooseDateButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBaseline="@+id/editAlarmDateLabel"
			android:layout_alignParentRight="true"
			android:background="@drawable/button1shape"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:text="@string/choose"
			android:textColor="#FFFFFF" />

		<TextView
			android:id="@+id/editAlarmTimeLabel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@+id/editAlarmChosenDate"
			android:layout_marginTop="40dp"
			android:text="@string/time"
			android:textSize="20sp" />

		<TimePicker
			android:id="@+id/editAlarmTimePicker"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/editAlarmTimeLabel"
			android:layout_centerHorizontal="true" />

	</RelativeLayout>

</ScrollView>