<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="20dp"
	android:focusable="true"
	android:focusableInTouchMode="true">

	<EditText
		android:id="@+id/editPlaylistNameEditText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/editPlayListNameLabel"
		android:layout_marginLeft="30dp"
		android:layout_toRightOf="@+id/editPlaylistSongsLabel"
		android:ems="10"
		android:hint="@string/nameOfThePlaylist"
		android:inputType="textCapSentences" />

	<TextView
		android:id="@+id/editPlayListNameLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/editPlayListTitle"
		android:layout_marginTop="40dp"
		android:text="@string/name"
		android:textSize="20sp" />

	<TextView
		android:id="@+id/editPlaylistSongsLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/editPlayListNameLabel"
		android:layout_below="@+id/editPlayListNameLabel"
		android:layout_marginTop="40dp"
		android:text="@string/songs"
		android:textSize="20sp" />

	<ListView
		android:id="@+id/editPlaylistSongsListView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentLeft="true"
		android:layout_below="@+id/editPlaylistSongsLabel"
		android:layout_marginTop="40dp"
		android:divider="@android:color/transparent"
		android:dividerHeight="10dp"
		android:drawSelectorOnTop="false" />

	<TextView
		android:id="@+id/editPlayListTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:text="@string/playlist"
		android:textSize="30sp" />

	<Button
		android:id="@+id/editPlaylistSaveButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:background="@drawable/button2shape"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:text="@string/save"
		android:textColor="#FFFFFF" />

	<Button
		android:id="@+id/editPlaylistAddSongsButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/editPlaylistSongsLabel"
		android:layout_toLeftOf="@+id/editPlaylistRemoveAllButton"
		android:background="@drawable/button1shape"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:text="@string/add"
		android:textColor="#FFFFFF" />
	
	<ProgressBar
	    android:id="@+id/editPlaylistSaveProgressBar"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editPlaylistSaveButton"
	    android:layout_alignRight="@+id/editPlaylistSaveButton"
	    android:layout_alignTop="@+id/editPlaylistSaveButton" />
    
	<Button
		android:id="@+id/editPlaylistRemoveAllButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@+id/editPlaylistAddSongsButton"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="15dp"
		android:background="@drawable/button1shape"
		android:paddingLeft="12dp"
		android:paddingRight="12dp"
		android:text="@string/removeAll"
		android:textColor="#FFFFFF" />

</RelativeLayout>