<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="20dp">

		<RelativeLayout
			android:id="@+id/chooseDateRelLayout1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ToggleButton
				android:id="@+id/chooseDateToggleMon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:layout_centerHorizontal="true"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/monday"
				android:textOn="@string/monday" />
	
			<ToggleButton
				android:id="@+id/chooseDateToggleTue"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/chooseDateToggleMon"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="10dp"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/tuesday"
				android:textOn="@string/tuesday" />
	
			<ToggleButton
				android:id="@+id/chooseDateToggleWed"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/chooseDateToggleTue"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="10dp"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/wednesday"
				android:textOn="@string/wednesday" />
	
			<ToggleButton
				android:id="@+id/chooseDateToggleThu"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/chooseDateToggleWed"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="10dp"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/thursday"
				android:textOn="@string/thursday" />
	
			<ToggleButton
				android:id="@+id/chooseDateToggleFri"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/chooseDateToggleThu"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="10dp"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/friday"
				android:textOn="@string/friday" />
	
			<ToggleButton
				android:id="@+id/chooseDateToggleSat"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/chooseDateToggleFri"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="10dp"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/saturday"
				android:textOn="@string/saturday" />
	
			<ToggleButton
				android:id="@+id/chooseDateToggleSun"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/chooseDateToggleSat"
				android:layout_centerHorizontal="true"
				android:layout_marginTop="10dp"
				android:background="@drawable/button3shape"
				android:onClick="toggleDay"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text=""
				android:textColor="#FFFFFF"
				android:textOff="@string/sunday"
				android:textOn="@string/sunday" />

		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/chooseDateRelLayout1"
			android:gravity="center_horizontal|bottom" >

			<Button
				android:id="@+id/chooseRepeatDateDoneButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/button2shape"
				android:onClick="repeatDone"
				android:paddingLeft="12dp"
				android:paddingRight="12dp"
				android:text="@string/save"
				android:textColor="#FFFFFF" />

		</LinearLayout>

	</RelativeLayout>

</ScrollView>